New changes added.

--- a/TrainingProject/TrainingProject.csproj
+++ b/TrainingProject/TrainingProject.csproj
@@ -343,6 +343,9 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Basic\Constructor.cs" />
+    <Compile Include="Basic\Inheritance.cs" />
+    <Compile Include="Basic\MethodOverloading.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -352,6 +355,7 @@
     <Compile Include="Controllers\DropdownController.cs" />
     <Compile Include="Controllers\EditorsController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\HTTPMethodsController.cs" />
     <Compile Include="Controllers\PartialViewController.cs" />
     <Compile Include="Controllers\PlantsController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
@@ -1249,6 +1253,7 @@
     <Content Include="Views\Email\InspectionCallEmail.cshtml" />
     <Content Include="Views\Email\SupplierMailSignature.cshtml" />
     <Content Include="Views\Test\Test.cshtml" />
+    <Content Include="Views\HTTPMethods\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
