--- a/TrainingProject/TrainingProject.csproj
+++ b/TrainingProject/TrainingProject.csproj
@@ -1261,6 +1261,7 @@
     <Content Include="Views\Test\Test.cshtml" />
     <Content Include="Views\HTTPMethods\Test.cshtml" />
     <Content Include="Views\CollectionList\Index.cshtml" />
+    <Content Include="Views\Dropdown\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -1281,7 +1282,6 @@
     <Folder Include="App_Data\User Manual\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\DateTime\" />
-    <Folder Include="Views\Dropdown\" />
     <Folder Include="Views\Editors\" />
     <Folder Include="Views\PartialView\" />
     <Folder Include="Views\TextBox\" />
